refactor: use @AuthenticationPrincipal for session management